# kdisplay-presets

./: .gitignore  CLAUDE.md  CMakeLists.txt  Messages.sh
common/: CMakeLists.txt  presets.cpp  presets.h  utils.cpp  utils.h
daemon/: CMakeLists.txt  main.cpp  org.kde.kdisplaypresets.xml  plasma-kdisplaypresets.service  presetsservice.cpp  presetsservice.h
kcm/: CMakeLists.txt  kcm_displaypresets.cpp  kcm_displaypresets.h  kcm_displaypresets.json  preset_manager.cpp  preset_manager.h
kcm/ui/: PresetOutput.qml  PresetView.qml  main.qml
plasmoid/: CMakeLists.txt  PresetList.qml  PresetOutput.qml  PresetView.qml  kdisplaypresets_applet.cpp  kdisplaypresets_applet.h  main.qml  metadata.json
po/pl/: kcm_displaypresets.po  kdisplaypresets_common.po  kdisplaypresets_daemon.po  plasma_applet_org.kde.kdisplaypresets.po
